# XDUCraft-bot

./: .env.prod  .env.prod.example  .gitignore  README.md  pyproject.toml  requirements.txt
xducraft_bot/plugins/xducraft_happy_bot/: __init__.py  data_manager.py
xducraft_bot/plugins/xducraft_happy_bot/data/: at_me_switch.json.example
xducraft_bot/plugins/xducraft_mc_status/: __init__.py  config_coder.py  constants.py  data_manager.py  decode_image.py  drawing_utils.py  fonts.py  handlers.py  image_renderer.py  status_fetcher.py  utils.py
xducraft_bot/plugins/xducraft_mc_status/data/: server_data.json.example
